# MaestroLibrary

./: .gitignore  CMakeLists.txt  README.md  build.bat  index.html  libMaestroControl.cpp  libMaestroControl.h  main.cpp
lib/: Socket.cpp  Socket.h  Tracer.h  UrlHelper.cpp  UrlHelper.h  libMaestroControl.cpp  libMaestroControl.h  stdHelpers.cpp  stdHelpers.h  webserver.cpp  webserver.h
